# GLGrass

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: grassFragment.glsl  grassVertex.glsl  mainFragment.glsl  mainVertex.glsl  plane.mtl
src/: grassRenderer.cpp  grassRenderer.h  main.cpp
src/math/: camera.cpp  camera.h  frustum.cpp  frustum.h
src/mesh/: mesh.cpp  mesh.h
src/utils/: grassChunk.cpp  grassChunk.h  shader.cpp  shader.h  utils.cpp  utils.h
